🔗 - Fix hover target links on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ article:after {
     overflow: hidden;
     --overflow: 20px;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 20px);
     border-radius: 1rem;
 }
 
